June 2010 3.1.0
  - Asterisk voicemail support
  - new hosts module for user accounts to define valid login workstations (replaces inetOrgPerson schema hack) (2951116)
  - PDF editor: descriptive fields
  - lamdaemon: sudo entry needs to be changed to ".../lamdaemon.pl *"
  - LAM Pro
   -> custom scripts: new options to hide executed commands and define if output is HTML or plain text
  - fixed bugs:
   -> Asterisk password handling (patch 2979728)
   -> Samba domain SID check (2994528)
   -> language selection at login (2996335)


24.03.2010 3.0.0
  - support to remove extension from an existing account: shadowAccount, sambaSamAccount, eduPerson
  - file upload: allow to select account modules for upload
  - removed frames
  - Unix: automatic user name generation from first and last name (2492675)
  - LAM Pro:
   -> support OpenLDAP password policies (ppolicy)
   -> manage host IP addresses (ipHost)
  - fixed bugs:
   -> Multi-delete not working (2931458)
   -> Samba: can/must change password needs to be read from domain policy (2919236)
   -> DNs which include "#" are not editable/deletable (2931461)
   -> fixed configure/Makefile
   -> Asterisk input fields and authentication realm (patch 2971792)

16.12.2009 2.9.0
  - Asterisk support
  - new tool: server information
  - consolidated LAM documentation in new manual (docs/manual/index.html)
	- DHCP: add host name to fixed IPs (RFE 2898948)
	- LAM Pro:
	 -> enabled custom scripts for self service
	 -> support for nisObject object class
  - fixed bugs:
	 -> unable to edit accounts with DNs that contain spaces next to a comma (2889473)
	 -> login method "LDAP search" has problems if LDAP server is down (2889414)
	 -> filter in account lists did not support non-ASCII letters
	 -> alias handling (2901248)
	 -> DHCP range check (2903267)


28.10.2009 2.8.0
  - ability to hide fields: inetOrgPerson, sambaSamAccount
	- compatibility with PHP 5.3
	- one central button to change passwords on account pages